as-2/canary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aufnito-canary
  namespace: aufnito
spec:
  selector: 
    app: aufnito-canary
  type: ClusterIP 
  ports:
    - port: 8091
      targetPort: 80
